--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,10 @@
     color: #8892b0;
   }
 }
+
+.title {
+  color: #64ffda ;
+  font-size: x-large;
+  font-weight: 500;
+  letter-spacing: 0.3px;
+}
