--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @layer base {
   body {
     font-family: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
-    /* background-color: #0a192f; */
+    background-color: #0a192f;
     color: #8892b0;
   }
 }
